// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/dws-certifications/_certificationId/index.vue FAB (speed dial) should be rendered when session auth is system admin 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M3 6V8H14V6H3M3 10V12H14V10H3M20 10.1C19.9 10.1 19.7 10.2 19.6 10.3L18.6 11.3L20.7 13.4L21.7 12.4C21.9 12.2 21.9 11.8 21.7 11.6L20.4 10.3C20.3 10.2 20.2 10.1 20 10.1M18.1 11.9L12 17.9V20H14.1L20.2 13.9L18.1 11.9M3 14V16H10V14H3Z"
    nuxt=""
    to="/users/1/dws-certifications/10/edit"
  >
      受給者証情報を編集
  </z-fab-speed-dial-button-stub>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
  >
      受給者証情報を削除
  </z-fab-speed-dial-button-stub>
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/dws-certifications/_certificationId/index.vue FAB (speed dial) should be rendered when the staff has permissions: [ 'dws-certifications/delete' ] 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <!---->
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
  >
      受給者証情報を削除
  </z-fab-speed-dial-button-stub>
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/dws-certifications/_certificationId/index.vue FAB (speed dial) should be rendered when the staff has permissions: [ 'dws-certifications/update' ] 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M3 6V8H14V6H3M3 10V12H14V10H3M20 10.1C19.9 10.1 19.7 10.2 19.6 10.3L18.6 11.3L20.7 13.4L21.7 12.4C21.9 12.2 21.9 11.8 21.7 11.6L20.4 10.3C20.3 10.2 20.2 10.1 20 10.1M18.1 11.9L12 17.9V20H14.1L20.2 13.9L18.1 11.9M3 14V16H10V14H3Z"
    nuxt=""
    to="/users/1/dws-certifications/10/edit"
  >
      受給者証情報を編集
  </z-fab-speed-dial-button-stub>
  <!---->
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/dws-certifications/_certificationId/index.vue FAB (speed dial) should be rendered when the staff has permissions: [ 'dws-certifications/update', 'dws-certifications/delete' ] 1`] = `
<z-fab-speed-dial-stub
  data-fab=""
  icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M3 6V8H14V6H3M3 10V12H14V10H3M20 10.1C19.9 10.1 19.7 10.2 19.6 10.3L18.6 11.3L20.7 13.4L21.7 12.4C21.9 12.2 21.9 11.8 21.7 11.6L20.4 10.3C20.3 10.2 20.2 10.1 20 10.1M18.1 11.9L12 17.9V20H14.1L20.2 13.9L18.1 11.9M3 14V16H10V14H3Z"
    nuxt=""
    to="/users/1/dws-certifications/10/edit"
  >
      受給者証情報を編集
  </z-fab-speed-dial-button-stub>
  <z-fab-speed-dial-button-stub
    color="secondary"
    icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
  >
      受給者証情報を削除
  </z-fab-speed-dial-button-stub>
</z-fab-speed-dial-stub>
`;

exports[`pages/users/_id/dws-certifications/_certificationId/index.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <z-user-summary-stub
    user="[object Object]"
  />
  <div
    class="z-data-card-stub"
    title="児童情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M10 4a2 2 0 104 0 2 2 0 10-4 0M19 13v-2c-1.54.02-3.09-.75-4.07-1.83l-1.29-1.43c-.17-.19-.38-.34-.61-.45-.01 0-.01-.01-.02-.01H13c-.35-.2-.75-.3-1.19-.26C10.76 7.11 10 8.04 10 9.09V15c0 1.1.9 2 2 2h5v5h2v-5.5c0-1.1-.9-2-2-2h-3v-3.45c1.29 1.07 3.25 1.94 5 1.95zm-6.17 5c-.41 1.16-1.52 2-2.83 2-1.66 0-3-1.34-3-3 0-1.31.84-2.41 2-2.83V12.1a5 5 0 105.9 5.9h-2.07z"
      label="氏名"
      value="倉田 綾"
    />
    <z-data-card-item-stub
      label="氏名：フリガナ"
      value="クラタ アヤ"
    />
    <z-data-card-item-stub
      icon="M12,6C13.11,6 14,5.1 14,4C14,3.62 13.9,3.27 13.71,2.97L12,0L10.29,2.97C10.1,3.27 10,3.62 10,4A2,2 0 0,0 12,6M16.6,16L15.53,14.92L14.45,16C13.15,17.29 10.87,17.3 9.56,16L8.5,14.92L7.4,16C6.75,16.64 5.88,17 4.96,17C4.23,17 3.56,16.77 3,16.39V21A1,1 0 0,0 4,22H20A1,1 0 0,0 21,21V16.39C20.44,16.77 19.77,17 19.04,17C18.12,17 17.25,16.64 16.6,16M18,9H13V7H11V9H6A3,3 0 0,0 3,12V13.54C3,14.62 3.88,15.5 4.96,15.5C5.5,15.5 6,15.3 6.34,14.93L8.5,12.8L10.61,14.93C11.35,15.67 12.64,15.67 13.38,14.93L15.5,12.8L17.65,14.93C18,15.3 18.5,15.5 19.03,15.5C20.11,15.5 21,14.62 21,13.54V12A3,3 0 0,0 18,9Z"
      label="生年月日"
    >
      <time
        datetime="2021-06-11"
      >
        令和3年6月11日
      </time>
    </z-data-card-item-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <div
    class="z-data-card-stub"
    title="基本情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="適用日"
    >
      <time
        datetime="1988-08-23"
      >
        昭和63年8月23日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M12,10.5A1.5,1.5 0 0,1 13.5,12A1.5,1.5 0 0,1 12,13.5A1.5,1.5 0 0,1 10.5,12A1.5,1.5 0 0,1 12,10.5M7.5,10.5A1.5,1.5 0 0,1 9,12A1.5,1.5 0 0,1 7.5,13.5A1.5,1.5 0 0,1 6,12A1.5,1.5 0 0,1 7.5,10.5M16.5,10.5A1.5,1.5 0 0,1 18,12A1.5,1.5 0 0,1 16.5,13.5A1.5,1.5 0 0,1 15,12A1.5,1.5 0 0,1 16.5,10.5Z"
      label="認定区分"
      value="申請中"
    />
    <z-data-card-item-stub
      icon="M2,6H4V18H2V6M5,6H6V18H5V6M7,6H10V18H7V6M11,6H12V18H11V6M14,6H16V18H14V6M17,6H20V18H17V6M21,6H22V18H21V6Z"
      label="受給者証番号"
      value="3582530952"
    />
    <z-data-card-item-stub
      icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
      label="障害種別"
    >
      <v-chip-stub
        active="true"
        activeclass=""
        closeicon="$delete"
        closelabel="$vuetify.close"
        filtericon="$complete"
        label="true"
        small="true"
        tag="span"
      >
        精神
      </v-chip-stub>
      <v-chip-stub
        active="true"
        activeclass=""
        closeicon="$delete"
        closelabel="$vuetify.close"
        filtericon="$complete"
        label="true"
        small="true"
        tag="span"
      >
        知的
      </v-chip-stub>
      <v-chip-stub
        active="true"
        activeclass=""
        closeicon="$delete"
        closelabel="$vuetify.close"
        filtericon="$complete"
        label="true"
        small="true"
        tag="span"
      >
        難病
      </v-chip-stub>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M19 19H5V8H19M16 1V3H8V1H6V3H5C3.9 3 3 3.9 3 5V19C3 20.11 3.9 21 5 21H19C20.11 21 21 20.11 21 19V5C21 3.9 20.11 3 19 3H18V1M10.88 12H7.27L10.19 14.11L9.08 17.56L12 15.43L14.92 17.56L13.8 14.12L16.72 12H13.12L12 8.56L10.88 12Z"
      label="交付年月日"
    >
      <time
        datetime="1986-11-27"
      >
        昭和61年11月27日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
      label="市区町村名"
      value="伊具郡丸森町"
    />
    <z-data-card-item-stub
      label="市区町村番号"
      value="48743"
    />
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <div
    class="z-data-card-stub"
    title="介護給付費の支給決定内容"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M3,22V8H7V22H3M10,22V2H14V22H10M17,22V14H21V22H17Z"
      label="障害支援区分"
    >
      区分3
      （重度障害者等包括支援対象）
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
      label="認定有効期間"
    >
      <time
        datetime="1992-05-14"
      >
        平成4年5月14日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="1996-07-11"
      >
        平成8年7月11日
      </time>
    </z-data-card-item-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <div
    class="mt-1 z-data-card-stub"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
      label="サービス種別"
      value="居宅介護：家事援助中心"
    />
    <z-data-card-item-stub
      icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
      label="支給量等"
      value="588"
    />
    <z-data-card-item-stub
      icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
      label="支給決定期間"
    >
      <time
        datetime="1999-05-19"
      >
        平成11年5月19日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="1999-09-24"
      >
        平成11年9月24日
      </time>
    </z-data-card-item-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <div
    class="mt-1 z-data-card-stub"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
      label="サービス種別"
      value="居宅介護：通院等介助（身体介護を伴わない場合）中心"
    />
    <z-data-card-item-stub
      icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
      label="支給量等"
      value="680"
    />
    <z-data-card-item-stub
      icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
      label="支給決定期間"
    >
      <time
        datetime="1989-06-29"
      >
        平成1年6月29日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="2006-09-15"
      >
        平成18年9月15日
      </time>
    </z-data-card-item-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <div
    class="mt-1 z-data-card-stub"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
      label="サービス種別"
      value="居宅介護：通院等介助（身体介護を伴う場合）中心"
    />
    <z-data-card-item-stub
      icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
      label="支給量等"
      value="786"
    />
    <z-data-card-item-stub
      icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
      label="支給決定期間"
    >
      <time
        datetime="2000-07-27"
      >
        平成12年7月27日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="1983-01-05"
      >
        昭和58年1月5日
      </time>
    </z-data-card-item-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <div
    class="z-data-card-stub"
    title="利用者負担に関する事項"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M4.08,11.92L12,4L19.92,11.92L18.5,13.33L13,7.83V22H11V7.83L5.5,13.33L4.08,11.92M12,4H22V2H2V4H12Z"
      label="負担上限月額"
    >
      5,185円
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
      label="利用者負担適用期間"
    >
      <time
        datetime="1971-06-08"
      >
        昭和46年6月8日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="1978-10-02"
      >
        昭和53年10月2日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M3,22V8H7V22H3M10,22V2H14V22H10M17,22V14H21V22H17Z"
      label="上限管理区分"
    >
      自社事業所
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
      label="上限額管理事業所名"
    >
      浜松
    </z-data-card-item-stub>
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-subheader-stub
    class="mt-4"
  >
    訪問系サービス事業者記入欄
  </z-subheader-stub>
  <v-container-stub
    class="pa-0"
    tag="div"
  >
    <v-row-stub
      dense="true"
      tag="div"
    >
      <v-col-stub
        cols="12"
        sm="6"
        tag="div"
      >
        <div
          class="ma-0 z-data-card-stub"
        >
          <div
            class="z-data-card-stub-slot-actions"
          />
          <z-data-card-item-stub
            icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
            label="番号"
            value="1"
          />
          <z-data-card-item-stub
            icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
            label="事業所"
            value="土屋訪問介護事業所"
          />
          <z-data-card-item-stub
            icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
            label="サービス内容"
            value="重度訪問介護（障害支援区分6該当者）"
          />
          <z-data-card-item-stub
            icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
            label="契約支給量"
          >
            <span>
              67時間/月
            </span>
          </z-data-card-item-stub>
          <z-data-card-item-stub
            icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M16.53,11.06L15.47,10L10.59,14.88L8.47,12.76L7.41,13.82L10.59,17L16.53,11.06Z"
            label="契約日"
          >
            <time
              datetime="1997-11-27"
            >
              平成9年11月27日
            </time>
          </z-data-card-item-stub>
          <z-data-card-item-stub
            icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
            label="当該契約支給量によるサービス提供終了日"
          >
            <time
              datetime="1998-12-27"
            >
              平成10年12月27日
            </time>
          </z-data-card-item-stub>
          <div
            class="z-data-card-stub-slot-header"
          />
        </div>
      </v-col-stub>
      <v-col-stub
        cols="12"
        sm="6"
        tag="div"
      >
        <div
          class="ma-0 z-data-card-stub"
        >
          <div
            class="z-data-card-stub-slot-actions"
          />
          <z-data-card-item-stub
            icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
            label="番号"
            value="2"
          />
          <z-data-card-item-stub
            icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
            label="事業所"
            value="新宿"
          />
          <z-data-card-item-stub
            icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
            label="サービス内容"
            value="通院介助（身体介護を伴わない）"
          />
          <z-data-card-item-stub
            icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
            label="契約支給量"
          >
            <span>
              755時間/月
            </span>
          </z-data-card-item-stub>
          <z-data-card-item-stub
            icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M16.53,11.06L15.47,10L10.59,14.88L8.47,12.76L7.41,13.82L10.59,17L16.53,11.06Z"
            label="契約日"
          >
            <time
              datetime="1995-10-02"
            >
              平成7年10月2日
            </time>
          </z-data-card-item-stub>
          <z-data-card-item-stub
            icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
            label="当該契約支給量によるサービス提供終了日"
          >
            <time
              datetime="2008-01-05"
            >
              平成20年1月5日
            </time>
          </z-data-card-item-stub>
          <div
            class="z-data-card-stub-slot-header"
          />
        </div>
      </v-col-stub>
      <v-col-stub
        cols="12"
        sm="6"
        tag="div"
      >
        <div
          class="ma-0 z-data-card-stub"
        >
          <div
            class="z-data-card-stub-slot-actions"
          />
          <z-data-card-item-stub
            icon="M19 19H5V5H19M19 3H5A2 2 0 0 0 3 5V19A2 2 0 0 0 5 21H19A2 2 0 0 0 21 19V5A2 2 0 0 0 19 3M7 9H9.31L9.63 6H11.63L11.31 9H13.31L13.63 6H15.63L15.31 9H17V11H15.1L14.9 13H17V15H14.69L14.37 18H12.37L12.69 15H10.69L10.37 18H8.37L8.69 15H7V13H8.9L9.1 11H7V9M11.1 11L10.9 13H12.9L13.1 11Z"
            label="番号"
            value="3"
          />
          <z-data-card-item-stub
            icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
            label="事業所"
            value="名古屋"
          />
          <z-data-card-item-stub
            icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
            label="サービス内容"
            value="通院介助（身体介護を伴わない）"
          />
          <z-data-card-item-stub
            icon="M6,2H18V8H18V8L14,12L18,16V16H18V22H6V16H6V16L10,12L6,8V8H6V2M16,16.5L12,12.5L8,16.5V20H16V16.5M12,11.5L16,7.5V4H8V7.5L12,11.5M10,6H14V6.75L12,8.75L10,6.75V6Z"
            label="契約支給量"
          >
            <span>
              526.3時間/月
            </span>
          </z-data-card-item-stub>
          <z-data-card-item-stub
            icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M16.53,11.06L15.47,10L10.59,14.88L8.47,12.76L7.41,13.82L10.59,17L16.53,11.06Z"
            label="契約日"
          >
            <time
              datetime="1991-01-08"
            >
              平成3年1月8日
            </time>
          </z-data-card-item-stub>
          <z-data-card-item-stub
            icon="M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M9.31,17L11.75,14.56L14.19,17L15.25,15.94L12.81,13.5L15.25,11.06L14.19,10L11.75,12.44L9.31,10L8.25,11.06L10.69,13.5L8.25,15.94L9.31,17Z"
            label="当該契約支給量によるサービス提供終了日"
          >
            <time
              datetime="1977-03-09"
            >
              昭和52年3月9日
            </time>
          </z-data-card-item-stub>
          <div
            class="z-data-card-stub-slot-header"
          />
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
  <z-system-meta-card-stub
    createdat="2022-01-26T04:09:58+0900"
    id="10"
    updatedat="2017-03-03T07:12:44+0900"
  />
  <z-fab-speed-dial-stub
    data-fab=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
  >
    <z-fab-speed-dial-button-stub
      color="secondary"
      icon="M3 6V8H14V6H3M3 10V12H14V10H3M20 10.1C19.9 10.1 19.7 10.2 19.6 10.3L18.6 11.3L20.7 13.4L21.7 12.4C21.9 12.2 21.9 11.8 21.7 11.6L20.4 10.3C20.3 10.2 20.2 10.1 20 10.1M18.1 11.9L12 17.9V20H14.1L20.2 13.9L18.1 11.9M3 14V16H10V14H3Z"
      nuxt=""
      to="/users/1/dws-certifications/10/edit"
    >
      受給者証情報を編集
    </z-fab-speed-dial-button-stub>
    <z-fab-speed-dial-button-stub
      color="secondary"
      icon="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
    >
      受給者証情報を削除
    </z-fab-speed-dial-button-stub>
  </z-fab-speed-dial-stub>
</div>
`;
